Fixed base path

--- a/contents/coming-soon.twig
+++ b/contents/coming-soon.twig
@@ -7,7 +7,7 @@
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 
-		<img src="/images/logo_500x500.png" alt="PHP USERGROUP DRESDEN e.V.">
+		<img src="{{ pages.getBaseUrl ~ '/images/logo_500x500.png' }}" alt="PHP USERGROUP DRESDEN e.V.">
 
 		<h1>Coming soon...</h1>
 	</div>
