--- a/contents/templates/404.twig
+++ b/contents/templates/404.twig
@@ -11,7 +11,7 @@ permalink: /404.html
 		<p>&nbsp;</p>
 		<p>&nbsp;</p>
 
-		<img src="/images/logo_500x500.png" alt="PHP USERGROUP DRESDEN e.V.">
+		<img src="{{ pages.getBaseUrl ~ '/images/logo_500x500.png' }}" alt="PHP USERGROUP DRESDEN e.V.">
 
 		<h1>Woops! - 404 Not Found</h1>
 
