Fixed image urls

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -32,27 +32,25 @@
     ]
   }
 }
-
-
 	</script>
 	<meta property="article:author" content="@xing_url@"/>
 	<meta property="article:publisher" content="@xing_url@"/>
 
-	<link rel="apple-touch-icon" sizes="57x57" href="/images/favicons/apple-icon-57x57.png">
-	<link rel="apple-touch-icon" sizes="60x60" href="/images/favicons/apple-icon-60x60.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="/images/favicons/apple-icon-72x72.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="/images/favicons/apple-icon-76x76.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="/images/favicons/apple-icon-114x114.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="/images/favicons/apple-icon-120x120.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="/images/favicons/apple-icon-144x144.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="/images/favicons/apple-icon-152x152.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="/images/favicons/android-icon-192x192.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="/images/favicons/favicon-96x96.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="57x57" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-57x57.png' }}">
+	<link rel="apple-touch-icon" sizes="60x60" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-60x60.png' }}">
+	<link rel="apple-touch-icon" sizes="72x72" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-72x72.png' }}">
+	<link rel="apple-touch-icon" sizes="76x76" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-76x76.png' }}">
+	<link rel="apple-touch-icon" sizes="114x114" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-114x114.png' }}">
+	<link rel="apple-touch-icon" sizes="120x120" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-120x120.png' }}">
+	<link rel="apple-touch-icon" sizes="144x144" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-144x144.png' }}">
+	<link rel="apple-touch-icon" sizes="152x152" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-152x152.png' }}">
+	<link rel="apple-touch-icon" sizes="180x180" href="{{ pages.getBaseUrl ~ '/images/favicons/apple-icon-180x180.png' }}">
+	<link rel="icon" type="image/png" sizes="192x192" href="{{ pages.getBaseUrl ~ '/images/favicons/android-icon-192x192.png' }}">
+	<link rel="icon" type="image/png" sizes="32x32" href="{{ pages.getBaseUrl ~ '/images/favicons/favicon-32x32.png' }}">
+	<link rel="icon" type="image/png" sizes="96x96" href="{{ pages.getBaseUrl ~ '/images/favicons/favicon-96x96.png' }}">
+	<link rel="icon" type="image/png" sizes="16x16" href="{{ pages.getBaseUrl ~ '/images/favicons/favicon-16x16.png' }}">
 	<meta name="msapplication-TileColor" content="#ffffff">
-	<meta name="msapplication-TileImage" content="/images/favicons/ms-icon-144x144.png">
+	<meta name="msapplication-TileImage" content="{{ pages.getBaseUrl ~ '/images/favicons/ms-icon-144x144.png' }}">
 	<meta name="theme-color" content="#ffffff">
 
 	<link rel="canonical" href="{{ pages.getBaseUrl }}"/>
@@ -79,8 +77,8 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/webfonts.css">
-	<link rel="stylesheet" href="/css/main.css">
+	<link rel="stylesheet" href="{{ pages.getBaseUrl ~ '/css/webfonts.css' }}'">
+	<link rel="stylesheet" href="{{ pages.getBaseUrl ~ '/css/main.css' }}">
 	<script src="https://use.fontawesome.com/12e03fffec.js" async="async"></script>
 </head>
 <body>
