--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -80,7 +80,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-	<link rel="stylesheet" href="{{ pages.getBaseUrl ~ '/css/webfonts.css' }}'">
+	<link rel="stylesheet" href="{{ pages.getBaseUrl ~ '/css/webfonts.css' }}">
 	<link rel="stylesheet" href="{{ pages.getBaseUrl ~ '/css/main.css' }}">
 	<script src="https://use.fontawesome.com/12e03fffec.js" async="async"></script>
 </head>
