--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -123,6 +123,8 @@
 			<div class="col-xs-12 text-center small text-muted">
 				&copy; {{ 'now'|date('Y') }} PHP USERGROUP DRESDEN e.V.
 				&middot;
+				<a href="{{ pages.getBaseUrl ~ '/statutes.html' }}">Satzung</a>
+				&middot;
 				<a href="{{ pages.getBaseUrl ~ '/imprint.html' }}">Impressum</a>
 				&middot;
 				<a href="{{ pages.getBaseUrl ~ '/privacy.html' }}">Datenschutz</a>
