--- a/contents/templates/page.twig
+++ b/contents/templates/page.twig
@@ -22,11 +22,18 @@
 	<div class="row blockspace">
 		<div class="col-xs-4 col-sm-4 col-md-3 col-lg-3">
 			<a href="{{ pages.getBaseUrl ~ '/' }}">
-				<img src="{{ pages.getBaseUrl ~ '/images/logo.png' }}" class="img-responsive" alt="{{ pages.getProjectName }}">
+				<img src="{{ pages.getBaseUrl ~ '/images/logo.png' }}" id="brandimg" class="img-responsive" alt="{{ pages.getProjectName }}">
 			</a>
 
 			<!-- sidebar -->
 			<nav id="sidebar" role="navigation">
+
+				<a href="{{ pages.getBaseUrl ~ '/become-member.html' }}" title="Mitglied werden" class="btn btn-block btn-success btn-lg text-uppercase">
+					Mitglied werden
+				</a>
+
+				<hr class="blockspace">
+
 				<ul class="nav">
 					{% for loopPage in pages.getPageConfigsAtLevel(2) %}
 
@@ -48,9 +55,13 @@
 				<div class="col-md-12 col-lg-12">
 					<ul class="breadcrumb hidden-xs hidden-sm">
 						{% for uri, title in breadCrumb %}
-							<li{% if loop.last %} class="active"{% endif %}>
-								<a href="{{ pages.getBaseUrl ~ uri }}">{{ title }}</a>
-							</li>
+							{% if not loop.last %}
+								<li>
+									<a href="{{ pages.getBaseUrl ~ uri }}">{{ title }}</a>
+								</li>
+							{% else %}
+								<li class="active">{{ title }}</li>
+							{% endif %}
 						{% endfor %}
 					</ul>
 				</div>
