--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -43,12 +43,11 @@
       "@xing_url@",
       "@gitter_url@",
       "@slackteam_url@",
+      "@meetup_url@",
       "@facebook_url@"
     ]
   }
 }
-
-
 
 	</script>
 	<meta property="article:author" content="@xing_url@"/>
@@ -97,7 +96,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{ project.getUrl('/css/webfonts.css') }}">
 	<link rel="stylesheet" href="{{ project.getUrl('/css/main.css') }}">
-	<script src="https://use.fontawesome.com/12e03fffec.js" async="async"></script>
+	<script src="https://use.fontawesome.com/e89ed69fdb.js" async="async"></script>
 </head>
 <body>
 
@@ -134,22 +133,25 @@
 				<div id="socialmedia">
 					<div class="row">
 						<div class="col-xs-4 text-center">
-							<a href="@github_url@" title="PHP USERGROUP DRESDEN e.V. at github"><i class="fa fa-github"></i></a>
+							<a href="@meetup_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at meetup.com"><i class="fa fa-meetup"></i></a>
 						</div>
 						<div class="col-xs-4 text-center">
-							<a href="@twitter_url@" title="PHP USERGROUP DRESDEN e.V. at twitter"><i class="fa fa-twitter"></i></a>
+							<a href="@twitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at twitter"><i class="fa fa-twitter"></i></a>
 						</div>
 						<div class="col-xs-4 text-center">
-							<a href="@facebook_url@" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-facebook"></i></a>
+							<a href="@facebook_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-facebook"></i></a>
 						</div>
 						<div class="col-xs-4 text-center">
-							<a href="@xing_url@" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-xing"></i></a>
+							<a href="@xing_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-xing"></i></a>
 						</div>
 						<div class="col-xs-4 text-center">
-							<a href="@gitter_url@" title="PHP USERGROUP DRESDEN e.V. at gitter"><i class="fa fa-commenting"></i></a>
+							<a href="@gitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at gitter"><i class="fa fa-github-square"></i></a>
 						</div>
 						<div class="col-xs-4 text-center">
-							<a href="@slackteam_url@" title="PHP USERGROUP DRESDEN e.V. at slack"><i class="fa fa-slack"></i></a>
+							<a href="@slackteam_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at slack"><i class="fa fa-slack"></i></a>
+						</div>
+						<div class="col-xs-4 text-center">
+							<a href="@github_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at github"><i class="fa fa-github"></i></a>
 						</div>
 					</div>
 				</div>
