--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -13,6 +13,10 @@ a:active {
 	text-decoration: none;
 }
 
+.fa.fa-meetup {
+	color: #da3846;
+}
+
 .fa.fa-github {
 	color: #505050;
 }
@@ -29,7 +33,7 @@ a:active {
 	color: #2a6366;
 }
 
-.fa.fa-commenting {
+.fa.fa-github-square {
 	color: #ce2d55;
 }
 
@@ -50,6 +54,10 @@ a:active {
 }
 
 .sponsor {
+	margin: 15px 0;
+}
+
+.coop {
 	margin: 15px 0;
 }
 
