Added newsletter form, added downloads for privacy and imprint

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -156,7 +156,22 @@
 					</div>
 				</div>
 
+				<hr class="blockspace">
+
+				<div class="newsletter-form">
+					<form action="//phpug-dresden.us11.list-manage.com/subscribe/post?u=8ff315933ee2697519dd5ab74&amp;id=5b5e847216" method="post" id="newsletter-form" target="_blank" role="form">
+						<div class="form-group">
+							<label for="newsletter-email" class="sr-only">Newsletter</label>
+							<input type="email" value="" name="EMAIL" class="form-control" id="newsletter-email" placeholder="E-Mail Adresse" required>
+						</div>
+						<div class="form-group">
+							<input type="submit" value="Jetzt zum Newsletter anmelden" name="subscribe" id="newsletter-button" class="btn btn-md btn-block btn-success">
+						</div>
+					</form>
+				</div>
+
 			</div>
+
 			<div class="col-xs-8 col-sm-8 col-md-9 col-lg-9">
 
 				<h1>{{ project.getName }} <span class="small">[VR 9725]</span></h1>
