--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -31,7 +31,7 @@
 	<meta name="ICBM" content="51.052088, 13.741672"/>
 	<meta name="twitter:site" content="@twitter_handle@">
 	<meta name="twitter:creator" content="@twitter_handle@">
-	<script type="application/ld+json">
+	<script type="application/ld+json">{% spaceless %}
 {
   "@context" : "http://schema.org",
   "@type": "Person",
@@ -47,9 +47,7 @@
       "@facebook_url@"
     ]
   }
-}
-
-	</script>
+}{% endspaceless %}</script>
 	<meta property="article:author" content="@xing_url@"/>
 	<meta property="article:publisher" content="@xing_url@"/>
 
@@ -104,16 +102,16 @@
 
 	<div class="container">
 
-		<div class="row blockspace">
-			<div class="col-xs-4 col-sm-4 col-md-3 col-lg-3">
-				<a href="{{ project.getUrl('/') }}">
-					<img src="{{ project.getUrl('/images/logo.png') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
-				</a>
+		<div class="row row-offcanvas row-offcanvas-left">
 
+			<div class="col-xs-6 col-sm-4 col-md-3 col-lg-3 sidebar-offcanvas" id="sidebar" role="navigation">
 				<!-- sidebar -->
-				<nav id="sidebar" role="navigation">
+				<nav id="sidenav">
+					<a href="{{ project.getUrl('/') }}" class="hidden-xs hidden-sm">
+						<img src="{{ project.getUrl('/images/logo.png') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
+					</a>
 
-					<a href="{{ project.getUrl('/become-member.html') }}" title="Mitglied werden" class="btn btn-block btn-success btn-lg text-uppercase">
+					<a href="{{ project.getUrl('/become-member.html') }}" title="Mitglied werden" class="blockspace btn btn-block btn-success btn-lg text-uppercase">
 						<i class="fa fa-hand-peace-o"></i> Mitglied werden
 					</a>
 
@@ -126,55 +124,66 @@
 
 						{% endfor %}
 					</ul>
-				</nav>
 
-				<hr class="blockspace">
+					<hr class="blockspace">
 
-				<div id="socialmedia">
-					<div class="row">
-						<div class="col-xs-4 text-center">
-							<a href="@meetup_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at meetup.com"><i class="fa fa-meetup"></i></a>
-						</div>
-						<div class="col-xs-4 text-center">
-							<a href="@twitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at twitter"><i class="fa fa-twitter"></i></a>
-						</div>
-						<div class="col-xs-4 text-center">
-							<a href="@facebook_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-facebook"></i></a>
-						</div>
-						<div class="col-xs-4 text-center">
-							<a href="@xing_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-xing"></i></a>
-						</div>
-						<div class="col-xs-4 text-center">
-							<a href="@gitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at gitter"><i class="fa fa-github-square"></i></a>
-						</div>
-						<div class="col-xs-4 text-center">
-							<a href="@slackteam_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at slack"><i class="fa fa-slack"></i></a>
-						</div>
-						<div class="col-xs-4 text-center">
-							<a href="@github_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at github"><i class="fa fa-github"></i></a>
+					<div id="socialmedia">
+						<div class="row">
+							<div class="col-xs-4 text-center">
+								<a href="@meetup_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at meetup.com"><i class="fa fa-meetup"></i></a>
+							</div>
+							<div class="col-xs-4 text-center">
+								<a href="@twitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at twitter"><i class="fa fa-twitter"></i></a>
+							</div>
+							<div class="col-xs-4 text-center">
+								<a href="@facebook_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-facebook"></i></a>
+							</div>
+							<div class="col-xs-4 text-center">
+								<a href="@xing_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-xing"></i></a>
+							</div>
+							<div class="col-xs-4 text-center">
+								<a href="@gitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at gitter"><i class="fa fa-github-square"></i></a>
+							</div>
+							<div class="col-xs-4 text-center">
+								<a href="@slackteam_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at slack"><i class="fa fa-slack"></i></a>
+							</div>
+							<div class="col-xs-4 text-center">
+								<a href="@github_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at github"><i class="fa fa-github"></i></a>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<hr class="blockspace">
+					<hr class="blockspace">
 
-				<div class="newsletter-form">
-					<form action="//phpug-dresden.us11.list-manage.com/subscribe/post?u=8ff315933ee2697519dd5ab74&amp;id=5b5e847216" method="post" id="newsletter-form" target="_blank" role="form">
-						<div class="form-group">
-							<label for="newsletter-email" class="sr-only">Newsletter</label>
-							<input type="email" value="" name="EMAIL" class="form-control" id="newsletter-email" placeholder="E-Mail Adresse" required>
-						</div>
-						<div class="form-group">
-							<input type="submit" value="Jetzt zum Newsletter anmelden" name="subscribe" id="newsletter-button" class="btn btn-md btn-block btn-success">
-						</div>
-					</form>
-				</div>
+					<div class="newsletter-form">
+						<form action="//phpug-dresden.us11.list-manage.com/subscribe/post?u=8ff315933ee2697519dd5ab74&amp;id=5b5e847216" method="post" id="newsletter-form" target="_blank" role="form">
+							<div class="form-group">
+								<label for="newsletter-email" class="sr-only">Newsletter</label>
+								<input type="email" value="" name="EMAIL" class="form-control" id="newsletter-email" placeholder="E-Mail Adresse" required>
+							</div>
+							<div class="form-group">
+								<input type="submit" value="Newsletter abonnieren" name="subscribe" id="newsletter-button" class="btn btn-md btn-block btn-success">
+							</div>
+						</form>
+					</div>
 
+				</nav>
 			</div>
 
-			<div class="col-xs-8 col-sm-8 col-md-9 col-lg-9">
+			<div class="col-xs-12 col-sm-8 col-md-9 col-lg-9" id="mainstage">
 
-				<h1>{{ project.getName }} <span class="small">[VR 9725]</span></h1>
+				<h1>
+					<a href="#" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs visible-sm hidden-md hidden-lg pull-left">
+						<i class="fa fa-bars"></i>&nbsp;|&nbsp;
+					</a>
+					<span class="pull-right visible-xs visible-sm hidden-md hidden-lg">
+						<img src="{{ project.getUrl('/images/favicons/ms-icon-70x70.png') }}" id="brandimg" class="img-responsive" alt="{{ project.getName }}">
+					</span>
+					<span class="visible-xs visible-sm hidden-md hidden-lg">
+
+					</span>
+					{{ project.getName }} <span class="small">[VR 9725]</span>
+				</h1>
 
 				<hr class="blockspace">
 
