Fixed offcanvas button

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -173,7 +173,7 @@
 			<div class="col-xs-12 col-sm-8 col-md-9 col-lg-9" id="mainstage">
 
 				<h1>
-					<a href="#" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs hidden-sm hidden-md hidden-lg pull-left">
+					<a href="javasctipt:void(0);" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs hidden-sm hidden-md hidden-lg pull-left">
 						<i class="fa fa-bars"></i>&nbsp;|&nbsp;
 					</a>
 					<span class="pull-right visible-xs visible-sm hidden-md hidden-lg">
