--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -120,7 +120,7 @@
 					<ul class="nav">
 						<li class="hidden-sm hidden-md hidden-lg">
 							<a href="{{ project.getUrl('/') }}" title="Home">Home</a>
-							</li>
+						</li>
 						{% for loopPage in project.getPageConfigsAtLevel(2) %}
 
 							{{ nav.subTree(loopPage, project, breadCrumb) }}
@@ -176,7 +176,7 @@
 			<div class="col-xs-12 col-sm-8 col-md-9 col-lg-9" id="mainstage">
 
 				<h1>
-					<a href="javasctipt:void(0);" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs hidden-sm hidden-md hidden-lg pull-left">
+					<a href="javascript:void(0);" data-toggle="offcanvas" data-target="#sidebar" class="visible-xs hidden-sm hidden-md hidden-lg pull-left">
 						<i class="fa fa-bars"></i>&nbsp;|&nbsp;
 					</a>
 					<span class="pull-right visible-xs visible-sm hidden-md hidden-lg">
