--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -170,6 +170,14 @@
 						</form>
 					</div>
 
+					<hr class="blockspace">
+
+					<div id="swk">
+						<a href="https://www.softwerkskammer.org/groups/sachsen" target="_blank" title="Softwerkskammer Sachsen">
+							<img src="{{ project.getUrl('/images/softwerkskammer.png') }}" alt="Logo Softwerkskammer" class="img-responsive">
+						</a>
+					</div>
+
 				</nav>
 			</div>
 
