Added phpdd16 page, Added youtube channel link

--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -137,23 +137,26 @@
 
 					<div id="socialmedia">
 						<div class="row">
-							<div class="col-xs-4 text-center">
+							<div class="col-xs-3 text-center">
 								<a href="@meetup_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at meetup.com"><i class="fa fa-meetup"></i></a>
 							</div>
-							<div class="col-xs-4 text-center">
+							<div class="col-xs-3 text-center">
 								<a href="@twitter_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at twitter"><i class="fa fa-twitter"></i></a>
 							</div>
-							<div class="col-xs-4 text-center">
+							<div class="col-xs-3 text-center">
 								<a href="@facebook_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-facebook"></i></a>
 							</div>
-							<div class="col-xs-4 text-center">
+							<div class="col-xs-3 text-center">
 								<a href="@xing_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at facebook"><i class="fa fa-xing"></i></a>
 							</div>
-							<div class="col-xs-4 text-center">
+							<div class="col-xs-3 text-center">
 								<a href="@slackteam_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at slack"><i class="fa fa-slack"></i></a>
 							</div>
-							<div class="col-xs-4 text-center">
+							<div class="col-xs-3 text-center">
 								<a href="@github_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at github"><i class="fa fa-github"></i></a>
+							</div>
+							<div class="col-xs-3 text-center">
+								<a href="@youtube_url@" target="_blank" title="PHP USERGROUP DRESDEN e.V. at YouTube"><i class="fa fa-youtube"></i></a>
 							</div>
 						</div>
 					</div>
