--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -94,7 +94,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{ project.getUrl('/css/webfonts.css') }}">
 	<link rel="stylesheet" href="{{ project.getUrl('/css/twemoji-awesome.css') }}">
-	<link rel="stylesheet" href="{{ project.getUrl('/css/main.css') }}">
+	<link rel="stylesheet" href="{{ project.getUrl('/css/main.css') ~ '?' ~ ('now'|date('YmdHis')) }}">
 	<script src="https://use.fontawesome.com/e89ed69fdb.js" async="async"></script>
 </head>
 <body>
