--- a/contents/templates/theme.twig
+++ b/contents/templates/theme.twig
@@ -255,7 +255,7 @@
 
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="{{ project.getUrl('/js/main.js') }}"></script>
+<script type="text/javascript" src="{{ project.getUrl('/js/main.js') ~ '?' ~ ('now'|date('YmdHis')) }}"></script>
 {% block javascripts %}{% endblock %}
 </body>
 </html>
